--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>CycleCountController</members>
+        <members>HandOverController</members>
+        <members>HandoverSerilizedProductCase</members>
+        <members>MarkAsReturnController</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
+        <members>ShowToast</members>
+        <members>RequestFlows</members>
+        <members>MedicalDeviceReturnFlows</members>
+        <members>QuickActions</members>
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
@@ -16,7 +22,7 @@
         <members>Case.Status</members>
         <members>Case.To_Date__c</members>
         <members>Case.Type</members>
-        <members>Date_of_Lost__c</members>
+        <members>Lost_Serialized_Product__c.Date_of_Lost__c</members>
         <members>Generic_Case_KPI__c.ActualBooleanValue__c</members>
         <members>Generic_Case_KPI__c.ActualDateTimeValue__c</members>
         <members>Generic_Case_KPI__c.ActualDecimalValue__c</members>
@@ -33,15 +39,15 @@
         <members>Generic_Case_KPI__c.SerialNumber__c</members>
         <members>Generic_Case_KPI__c.Type__c</members>
         <members>GnrcVstKeyPerformanceInd.SerialNumber__c</members>
-        <members>Location_Of_Lost__c</members>
+        <members>Lost_Serialized_Product__c.Location_Of_Lost__c</members>
         <members>Opportunity.CaseId__c</members>
         <members>Order.CaseId__c</members>
         <members>Order.Type</members>
-        <members>Reason_for_Loss__c</members>
-        <members>Serial_Number__c</members>
+        <members>Lost_Serialized_Product__c.Reason_for_Loss__c</members>
+        <members>Lost_Serialized_Product__c.Serial_Number__c</members>
         <members>SerializedProduct.Return_Date__c</members>
-        <members>Serialized_Product__c</members>
-        <members>User_Responsible_for_Loss__c</members>
+        <members>Lost_Serialized_Product__c.Serialized_Product__c</members>
+        <members>Lost_Serialized_Product__c.User_Responsible_for_Loss__c</members>
         <name>CustomField</name>
     </types>
     <types>
@@ -62,23 +68,58 @@
         <name>CustomObject</name>
     </types>
     <types>
-        <members>*</members>
+        <members>Loan_Request</members>
+        <members>Mark_as_Return</members>
+        <members>Sample_Request_Management</members>
+        <members>Trial_Device_Request</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>Hand_Over_Sample</members>
+        <members>New_Sample_Request</members>
+        <members>Trial_Hand_Over</members>
+        <members>Trial_Request</members>
+        <members>Handover_Loan</members>
+        <members>Loan_Request</members>
+        <members>Loaner_Return</members>
+        <members>Show_More_Actions</members>
+        <members>Mark_Product_for_Order</members>
+        <members>Mark_For_Lost</members>
         <name>Flow</name>
     </types>
     <types>
-        <members>*</members>
-        <name>Flow</name>
-    </types>
-    <types>
-        <members>*</members>
+        <members>eSignature</members>
+        <members>requestHandOverProduct</members>
+        <members>captureRequestProductDetails</members>
+        <members>relatedPicklistOptions</members>
+        <members>captureSummaryDetails</members>
+        <members>opportunitiesListCMP</members>
+        <members>lookup</members>
+        <members>markAsReturn</members>
+        <members>captureProductKPIDetails</members>
+        <members>markSerialNumbers</members>
+        <members>markProductForOrder</members>
+        <members>markForOrderVisit</members>
+        <members>markSerialNumbers</members>
+        <members>markForLost</members>
+        <members>requestedListViewsCmp</members>
+        <members>returnsListViewCmp</members>
+        <members>moreActions</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>Case.Status</members>
-        <members>Case.Type</members>
-        <members>Order.Status</members>
-        <members>Order.Type</members>
+        <members>CaseStatus</members>
+        <members>CaseType</members>
+        <members>OrderStatus</members>
+        <members>OrderType</members>
         <name>StandardValueSet</name>
     </types>
+    <types>
+		<members>Loan_Request</members>
+		<members>Mark_as_Return</members>
+		<members>Sample_Request</members>
+		<members>Trial_Request</members>
+		<name>FlexiPage</name>
+	</types>
     <version>54.0</version>
 </Package>
