--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,9 @@
         <members>HandOverController</members>
         <members>HandoverSerilizedProductCase</members>
         <members>MarkAsReturnController</members>
+        <members>MedicalDeviceReturnController</members>
+        <members>CycleCountControllerTest</members>
+        <members>HandOverControllerTest</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -105,6 +108,8 @@
         <members>requestedListViewsCmp</members>
         <members>returnsListViewCmp</members>
         <members>moreActions</members>
+        <members>customLookupSearchChildCmp</members>
+        <members>patientRegistration</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
