Added markAsTransferred and customLookupSeachCmp

--- a/package.xml
+++ b/package.xml
@@ -113,6 +113,8 @@
         <members>moreActions</members>
         <members>customLookupSearchChildCmp</members>
         <members>patientRegistration</members>
+        <members>customLookupSearchCmp</members>
+        <members>markAsTransferred</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
